--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.4",
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.28.4",
     "antd": "^5.15.3",
@@ -19,6 +20,7 @@
     "react-hook-form": "^7.51.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "vite-plugin-sass-dts": "^1.3.17",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
