--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.28.4",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
+    "flowbite-react": "^0.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
