--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.28.4",
     "antd": "^5.15.3",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "flowbite-react": "^0.7.8",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
