--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "vite-plugin-sass-dts": "^1.3.17",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-tsconfig-paths": "^4.3.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
