--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.15.3",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
+    "buid": "^0.3.1",
     "flowbite-react": "^0.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
