--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.4",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.28.4",
     "antd": "^5.15.3",
